[cs-demo] CSToastPreview add custom scrollbar and fix background colors of bottom quicklinks sections

--- a/cs-ui-demo/src/sass/_theme.scss
+++ b/cs-ui-demo/src/sass/_theme.scss
@@ -130,7 +130,11 @@ $lightVariables: (
 	--csd-transparent-bg: $cs-blue-dark-2,
 	--csd-shadow-light: rgba($cs-black, 0.12),
 	--csd-shadow-medium: rgba($cs-black, 0.2),
+	--csd-shadow-medium-dark: rgba($cs-black, 0.28),
 	--csd-shadow-dark: rgba($cs-black, 0.5),
+	--csd-shadow-light-hover: rgba($cs-black, 0.24),
+	--csd-shadow-medium-hover: rgba($cs-black, 0.32),
+	--csd-shadow-medium-dark-hover: rgba($cs-black, 0.40),
 
 	--csd-custom-bg-purple: $cs-purple,
 	--csd-custom-bg-mint: $cs-mint,
@@ -277,7 +281,11 @@ $darkVariables: (
 	--csd-transparent-bg: $cs-blue-dark-2,
 	--csd-shadow-light: rgba($cs-black, 0.12),
 	--csd-shadow-medium: rgba($cs-black, 0.2),
+	--csd-shadow-medium-dark: rgba($cs-black, 0.28),
 	--csd-shadow-dark: rgba($cs-black, 0.5),
+	--csd-shadow-light-hover: rgba($cs-black, 0.24),
+	--csd-shadow-medium-hover: rgba($cs-black, 0.32),
+	--csd-shadow-medium-dark-hover: rgba($cs-black, 0.40),
 
 	--csd-custom-bg-purple: $cs-purple,
 	--csd-custom-bg-mint: $cs-mint,
