--- a/cs-ui-demo/src/sass/previews/_preview.scss
+++ b/cs-ui-demo/src/sass/previews/_preview.scss
@@ -169,6 +169,7 @@
 				.component-code {
 					display: flex;
 					max-height: 31.75rem;
+					@include scrollbar-color;
 
 					&:last-child {
 						border-radius: 0 0 0.25rem 0.25rem;
